Rename refactor various corrections
